immediately print current message

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git://github.com/rputzolu/firstProj.git"
   },
-  "author": "",
+  "author": "Renzo Putzolu",
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/rputzolu/firstProj/issues"
